--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017.01.11, Version 1.0.8 (Stable)
+
+  * Fixed using a template multiple times
+
 2016.09.30, Version 1.0.7 (Stable)
 
   * Fixed correct version number
